--- a/exercises/ansible_f5/1.1-get-facts/bigip-facts.yml
+++ b/exercises/ansible_f5/1.1-get-facts/bigip-facts.yml
@@ -5,15 +5,20 @@
   gather_facts: no
 
   tasks:
-    - name: COLLECT BIG-IP FACTS
-      bigip_device_facts:
-        gather_subset:
-         - system-info
+  
+    - set_fact:
+       provider:
         server: "{{private_ip}}"
         user: "{{ansible_user}}"
         password: "{{ansible_ssh_pass}}"
         server_port: 8443
         validate_certs: no
+    
+    - name: COLLECT BIG-IP FACTS
+      bigip_device_facts:
+        gather_subset:
+         - system-info
+        provider: "{{provider"}}"
       register: device_facts
 
     - name: DISPLAY COMPLETE BIG-IP SYSTEM INFORMATION
