--- a/exercises/ansible_f5/2.2-error-handling/bigip-error-handling.yml
+++ b/exercises/ansible_f5/2.2-error-handling/bigip-error-handling.yml
@@ -4,6 +4,10 @@
   connection: local
   gather_facts: false
 
+  vars: 
+   - pool_name: "test_http_pool"
+   - vip_name: "test_vip_name"
+   
   tasks:
     - name: Setup provider
       set_fact:
@@ -26,7 +30,7 @@
         - name: CREATE POOL
           bigip_pool:
             provider: "{{provider}}"
-            name: "http_pool"
+            name: "{{pool_name}}"
             lb_method: "round-robin"
             monitors: "/Common/http"
             monitor_type: "and_list"
@@ -38,7 +42,7 @@
             name: "{{hostvars[item].inventory_hostname}}"
             host: "{{hostvars[item].ansible_host}}"
             port: "80"
-            pool: "http_pool"
+            pool: "{{pool_name}}"
           loop: "{{ groups['webservers'] }}"
 
         - name: ADD VIRTUAL SERVER
@@ -49,7 +53,7 @@
             port: "443"
             enabled_vlans: "all"
             all_profiles: ['http','clientssl','oneconnect']
-            pool: "http_pool"
+            pool: "{{pool_name}}"
             snat: "Automap1"
 
       rescue:
@@ -57,13 +61,13 @@
         - name: DELETE VIRTUAL SERVER
           bigip_virtual_server:
             provider: "{{provider}}"
-            name: "vip"
+            name: "{{test_vip_name}}"
             state: absent
 
         - name: DELETE POOL
           bigip_pool:
             provider: "{{provider}}"
-            name: "http_pool"
+            name: "{{test_http_pool}}"
             state: absent
 
         - name: DELETE NODES
