--- a/exercises/ansible_f5/1.3-add-pool/bigip-pool.yml
+++ b/exercises/ansible_f5/1.3-add-pool/bigip-pool.yml
@@ -9,15 +9,19 @@
 
   tasks:
 
-  - name: CREATE POOL
-    bigip_pool:
+  - set_fact:
+     provider:
       server: "{{private_ip}}"
       user: "{{ansible_user}}"
       password: "{{ansible_ssh_pass}}"
-      server_port: "8443"
+      server_port: 8443
+      validate_certs: no
+        
+  - name: CREATE POOL
+    bigip_pool:
+      provider: "{{provider}}"
       name: "{{item.pool_name}}"
       lb_method: "round-robin"
       monitors: "/Common/http"
       monitor_type: "and_list"
-      validate_certs: "no"
     loop: "{{vips_pools}}"
