--- a/exercises/ansible_f5/1.4-add-pool-members/bigip-pool-members.yml
+++ b/exercises/ansible_f5/1.4-add-pool-members/bigip-pool-members.yml
@@ -9,18 +9,22 @@
 
   tasks:
 
-  - name: ADD POOL MEMBERS
-    bigip_pool_member:
+  - set_fact:
+     provider:
       server: "{{private_ip}}"
       user: "{{ansible_user}}"
       password: "{{ansible_ssh_pass}}"
-      server_port: "8443"
+      server_port: 8443
+      validate_certs: no
+        
+  - name: ADD POOL MEMBERS
+    bigip_pool_member:
+      provider: "{{provider}}"
       state: "present"
       name: "{{hostvars[item[0]].inventory_hostname}}"
       host: "{{hostvars[item[0]].ansible_host}}"
       port: "80"
       pool: "{{item[1].pool_name}}"
-      validate_certs: "no"
     with_nested:
       - "{{ groups['webservers'] }}"
       - "{{vips_pools}}"
