--- a/exercises/ansible_f5/1.6-add-irules/bigip-irule.yml
+++ b/exercises/ansible_f5/1.6-add-irules/bigip-irule.yml
@@ -8,13 +8,17 @@
    
   tasks:
 
-  - name: ADD iRules
-    bigip_irule:
+  - set_fact:
+     provider:
       server: "{{private_ip}}"
       user: "{{ansible_user}}"
       password: "{{ansible_ssh_pass}}"
-      server_port: "8443"
-      validate_certs: "no"
+      server_port: 8443
+      validate_certs: no
+      
+  - name: ADD iRules
+    bigip_irule:
+      provider: "{{provider}}"
       module: "ltm"
       name: "{{item}}"
       content: "{{lookup('file','{{item}}')}}"
@@ -22,10 +26,6 @@
     
   - name: ATTACH iRules TO VIRTUAL SERVER
     bigip_virtual_server:
-      server: "{{private_ip}}"
-      user: "{{ansible_user}}"
-      password: "{{ansible_ssh_pass}}"
-      server_port: "8443"
-      validate_certs: "no"
+      provider: "{{provider}}"
       name: "vip"
       irules: "{{irules}}"
