--- a/exercises/ansible_f5/1.8-virtual-server-facts/bigip-virtual-server-facts.yml
+++ b/exercises/ansible_f5/1.8-virtual-server-facts/bigip-virtual-server-facts.yml
@@ -9,15 +9,20 @@
     vip_port: 8088
 
   tasks:
-    - name: Collect information of all virtual servers
-      bigip_device_facts:
-        gather_subset:
-         - virtual-servers
+  
+    - set_fact:
+       provider:
         server: "{{private_ip}}"
         user: "{{ansible_user}}"
         password: "{{ansible_ssh_pass}}"
         server_port: 8443
         validate_certs: no
+        
+    - name: Collect information of all virtual servers
+      bigip_device_facts:
+        gather_subset:
+         - virtual-servers
+        provider: "{{provider}}"
       register: facts_result
 
     - name: Display the results
