--- a/provisioner/roles/manage_ec2_instances/tasks/resources.yml
+++ b/provisioner/roles/manage_ec2_instances/tasks/resources.yml
@@ -61,6 +61,34 @@
         to_port: 8080
         from_port: 8080
         cidr_ip: 0.0.0.0/0
+       - proto: tcp
+        to_port: 8081
+        from_port: 8081
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8082
+        from_port: 8082
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8083
+        from_port: 8083
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8084
+        from_port: 8084
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8085
+        from_port: 8085
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8086
+        from_port: 8086
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8087
+        from_port: 8087
+        cidr_ip: 0.0.0.0/0
       - proto: tcp
         to_port: 8088
         from_port: 8088
@@ -68,6 +96,34 @@
       - proto: tcp
         to_port: 8089
         from_port: 8089
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8090
+        from_port: 8090
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8091
+        from_port: 8091
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8092
+        from_port: 8092
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8093
+        from_port: 8093
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8094
+        from_port: 8094
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8095
+        from_port: 8095
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        to_port: 8096
+        from_port: 8096
         cidr_ip: 0.0.0.0/0
       - proto: tcp
         to_port: 8443
