--- a/provisioner/roles/manage_ec2_instances/defaults/main.yml
+++ b/provisioner/roles/manage_ec2_instances/defaults/main.yml
@@ -9,22 +9,21 @@ webserver_type: "centos"
 # Additional info needed by AWS ec2 modules
 ec2_info:
   centos-tower:
-    image_id: "ami-f4533694"
+    name: "CentOS Linux 7 x86_64 HVM EBS *"
     size: t2.medium
     os_type: linux
     disk_space: 20
     architecture: x86_64
     username: centos
   centos:
-    image_id: "ami-f4533694"
+    name: "CentOS Linux 7 x86_64 HVM EBS *"
     size: t2.micro
     os_type: linux
     disk_space: 10
     architecture: x86_64
-    filter: "Hard_RHEL8*"
     username: centos
   f5node:
-    image_id: "ami-8e21a1f6"
+    name: "F5 Networks Prelicensed Hourly BIGIP-13.1.0.7-0.0.1 - Best 25MBPS *"    
     size: t2.large
     os_type: linux
     disk_space: 40
