--- a/provisioner/roles/f5_setup/tasks/main.yml
+++ b/provisioner/roles/f5_setup/tasks/main.yml
@@ -25,10 +25,11 @@
   bigip_wait:
     provider: "{{provider_info}}"
 
-- name: Grab AS3 RPM from github
-  get_url:
-    url: https://github.com/F5Networks/f5-appsvcs-extension/blob/master/dist/latest/{{as3_rpm}}?raw=true
-    dest: "{{ playbook_dir }}/roles/f5_setup/files"
+- shell: ls {{ playbook_dir }}/roles/f5_setup/files
+  register: ls_output
+
+- set_fact:
+   as3_rpm: "{{ls_output.stdout}}"
 
 # The bigip_iapplx_package requires rpm installed, on macOS use brew rather than pip or it won't work
 - name: Install AS3
