--- a/provisioner/f5_vars.yml
+++ b/provisioner/f5_vars.yml
@@ -3,7 +3,7 @@
 ec2_region: us-west-2
 
 # name prefix for all the VMs
-ec2_name_prefix: TESTWORKSHOP
+ec2_name_prefix: TESTWORKSHOP2
 
 # amount of work benches to provision
 student_total: 1
