--- a/provisioner/f5_vars.yml
+++ b/provisioner/f5_vars.yml
@@ -1,12 +1,14 @@
 ---
 # region where the nodes will live
 ec2_region: us-west-2
-
 # name prefix for all the VMs
 ec2_name_prefix: TESTWORKSHOP2
-
 # amount of work benches to provision
 student_total: 1
+
+## Optional Variables
+# password used for student account on control node
+admin_password: ansible
 
 # DO NOT CHANGE
 # workshp runs in F5 mode
