install lxml on Anible control node

--- a/provisioner/roles/control_node/tasks/networking.yml
+++ b/provisioner/roles/control_node/tasks/networking.yml
@@ -17,6 +17,7 @@
           - bigsuds
           - netaddr
           - jmespath
+          - lxml
         state: latest
   when: workshop_type == "f5"
 
